--- a/pvc.yml
+++ b/pvc.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: my-pvc
+  name: my-pvc2
 spec:
   storageClassName: standard
   volumeName: my-pv
   accessModes:
-    - ReadWriteOnce
+    - ReadOnlyMany
   resources:
     requests:
       storage: 512Mi
