--- a/pv.yml
+++ b/pv.yml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: task-pv-volume
+  name: my-pv
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: standard
+  persistentVolumeReclaimPolicy: Recycle ## Retain / Delete
   capacity:
-    storage: 1Gi
+    storage: 1000Mi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/readonly"
+    path: /mnt/readonly
