--- a/tier_pod.yml
+++ b/tier_pod.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod1
+  name: pod2
   labels:
-     tier: web
+     tier: App
      app: nginx
 spec:
   containers:
