--- a/schedular.yml
+++ b/schedular.yml
@@ -58,11 +58,11 @@ spec:
         - --address=0.0.0.0
         - --leader-elect=false
         - --scheduler-name=my-scheduler
-        image: gcr.io/my-gcp-project/my-kube-scheduler:1.0
+        image: nginx
         livenessProbe:
           httpGet:
             path: /healthz
-            port: 10251
+            port: 8080
           initialDelaySeconds: 15
         name: kube-second-scheduler
         readinessProbe:
