--- a/schedular.yml
+++ b/schedular.yml
@@ -51,30 +51,9 @@ spec:
         tier: control-plane
         version: second
     spec:
-      serviceAccountName: my-scheduler
+      schedulerName: my-scheduler
       containers:
-      - command:
-        - /usr/local/bin/kube-scheduler
-        - --address=0.0.0.0
-        - --leader-elect=false
-        - --scheduler-name=my-scheduler
-        image: nginx
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 8080
-          initialDelaySeconds: 15
-        name: kube-second-scheduler
-        readinessProbe:
-          httpGet:
-            path: /healthz
-            port: 10251
-        resources:
-          requests:
-            cpu: '0.1'
-        securityContext:
-          privileged: false
-        volumeMounts: []
-      hostNetwork: false
-      hostPID: false
-      volumes: []
+        - name: cont
+          image: nginx
+          ports:
+            - containerPort: 80
